--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,10 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#1E1E1E">
+    <script
+      src="https://cdn.jsdelivr.net/npm/react-render-tracker"
+      data-config="inpage:true"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
