feat: UI with Framer Motion animations and update meta title

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#1E1E1E">
+    <title>Volterra - Everything your research needs, in one place</title>
     <!--
       <script
         crossOrigin="anonymous"
