--- a/client/index.html
+++ b/client/index.html
@@ -7,19 +7,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#1E1E1E">
     <title>Volterra - Everything your research needs, in one place</title>
-    <!--
-      <script
-        crossOrigin="anonymous"
-        src="//unpkg.com/react-scan/dist/auto.global.js"
-      ></script>
-    -->
-    <!--<script
-      src="https://cdn.jsdelivr.net/npm/react-render-tracker"
-      data-config="inpage:true"
-    ></script>-->
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/app/main.tsx"></script>
   </body>
 </html>
